# FirstGitProjectTest

./: CMakeLists.txt  QVM  main.cpp  mk.sh  run.sh  swmk.sh  swrun.sh
QRunesParser/: CMakeLists.txt  CPUQuantumGates.cpp  CPUQuantumGates.h  CalcuPmeasure.h  CaluPmeasure.cpp  ERROR_INFO.h  Instruction.cpp  Instruction.h  LinkedListController.cpp  LinkedListController.h  QError.h  QParamStruct.h  QRunesParser.cpp  QRunesParser.h  QRunesParserAPI.cpp  QRunesParserAPI.h  QuantumGateParameter.h  QuantumGates.cpp  QuantumGates.h  QuantumInstructionGet.cpp  QuantumInstructionGet.h  SingletonForType.cpp  SingletonForType.h  TreeQList.cpp  TreeQList.h  lex.yy.cpp  y.tab.cpp  y.tab.h
doc/: README.md
doc/source/: conf.py
doc/source/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/source/_build/html/.doctrees/: environment.pickle  index.doctree
doc/source/_build/html/_sources/: index.rst.txt
doc/source/_build/html/_static/: documentation_options.js
doc/source/_build/html/base/: 01_Data_manipulation.html  02_Probability_and_Statistical_Analysis.html  03_numerical_calculation.html  04_linear_model.html  05_Preliminary_Machine_Learning.html  index.html
doc/source/_build/html/beginning/: 01_linux.html  02_ipython.html  03_numpy.html  04_matplotlib.html  05_seaborn.html  index.html
doc/source/_build/html/tool/: inde.html  (+2 more)
doc/source/base/: 02_Probability_and_Statistical_Analysis.rst  index.rst
doc/source/beginning/: 01_linux.rst  02_ipython.rst
doc/source/tool/: 01_Book_recommendation.rst  02_Good_resources.rst
(+39 files in other folders)
